<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PilferShush Jammer</string>
    <string name="passive_service_name">PilferShush Passive</string>
    <string name="active_service_name">PilferShush Active</string>
    <string name="action_about">About</string>
    <string name="action_readme">Readme</string>
    <string name="action_power">Power</string>
    <string name="action_debug">Debug</string>
    <string name="action_power_state">Available for Android 6.0 (API 23) Marshmallow and upwards only.</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Inspector</string>
    <string name="tab_text_3">Settings</string>
    <string name="perms_state_1">Record Audio</string>
    <string name="perms_state_2_1">PilferShush Jammer needs to make a permission request to access and enable jamming of the microphone, otherwise this app will not work.</string>
    <string name="perms_state_2_2">This app does not listen to any audio, does not record any audio and does not connect to the internet.</string>
    <string name="perms_state_3">Permission denied, please close this app, it will not work without RECORD AUDIO permission.</string>
    <string name="perms_state_4">Closing app due to no RECORD_AUDIO permission granted.</string>
    <string name="dialog_button_save">Save</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_okay">OK</string>
    <string name="dialog_button_yes">YES</string>
    <string name="dialog_button_no">NO</string>
    <string name="dialog_button_off">OFF</string>
    <string name="dialog_button_on">ON</string>
    <string name="dialog_button_dismiss">Dismiss</string>
    <string name="dialog_button_continue">Continue</string>
    <string name="dialog_button_source">GITHUB</string>
    <string name="dialog_button_moreinfo">More Info</string>
    <string name="notify_stop_button">STOP PASSIVE</string>
    <string name="options_dialog_1">Buffer read lock</string>
    <string name="doze_dialog_title">Change Settings</string>
    <string name="doze_dialog_1">PilferShush Jammer requests to be on the Android system Battery Optimizations exceptions allowlist.</string>
    <string name="doze_dialog_2">From Android 6.0 (API 23) Marshmallow onwards a new Doze battery conservation function was introduced by Android that defers background CPU activity for periods of time.</string>
    <string name="doze_dialog_3">While this app uses very low to negligible resources, the microphone Passive Jammer requires a background service to be running for it to work.</string>
    <string name="doze_dialog_4">For long term reliable use of the Jammer any battery optimisers or managers need to be set to allow PilferShush to continue running unimpeded.</string>
    <string name="doze_dialog_5">To add PilferShush to the system allowlist press "continue" to proceed to the Android Settings page, then select "All Apps" from drop down menu, search for PilferShush and select it.</string>
    <string name="audiofocus_check_1">AudioFocus check\u2026</string>
    <string name="audiofocus_check_2">AudioFocus request granted.</string>
    <string name="audiofocus_check_3">AudioFocus request failed.</string>
    <string name="audiofocus_check_4">AudioFocus unknown.</string>
    <string name="audiofocus_check_5">AudioFocus interrupt request.</string>
    <string name="audiofocus_check_6">AudioFocus interrupt request ignored.</string>
    <string name="audiofocus_check_7">AudioFocus interrupt request granted.</string>
    <string name="audiofocus_check_8">IRQ_TELEPHONY loss_transient.</string>
    <string name="resume_status_1">PASSIVE SERVICE FOUND</string>
    <string name="resume_status_2">PASSIVE SERVICE NOT FOUND</string>
    <string name="resume_status_3">ACTIVE SERVICE FOUND</string>
    <string name="resume_status_4">ACTIVE SERVICE NOT FOUND</string>
    <string name="resume_status_5">RESUME AUDIOFOCUS GRANT</string>
    <string name="resume_status_6">RESUME AUDIOFOCUS LOSS</string>
    <string name="resume_status_7">runPassive() when PASSIVE_RUNNING</string>
    <string name="resume_status_8">runActive() when ACTIVE_RUNNING</string>
    <string name="main_scanner_1" translatable="false">Active</string>
    <string name="main_scanner_2" translatable="false">Passive</string>
    <string name="main_scanner_3">Running passive jamming\u2026</string>
    <string name="main_scanner_4">Stop passive jamming.</string>
    <string name="main_scanner_5">Running active jamming\u2026</string>
    <string name="main_scanner_6">Stop active jamming.</string>
    <string name="main_inspector_1" translatable="false">Summary</string>
    <string name="main_inspector_2" translatable="false">Inspect</string>
    <string name="main_inspector_3" translatable="false">SDK list</string>
    <string name="app_status_1">passive jammer running,</string>
    <string name="app_status_2">passive jammer not running,</string>
    <string name="app_status_3">active jammer running.</string>
    <string name="app_status_4">active jammer not running.</string>
    <string name="app_status_5">EQ is turned off.</string>
    <string name="app_status_6">EQ is turned on.</string>
    <string name="app_status_7">EQ is not available.</string>
    <string name="app_status_8">Active jammer switched to tones.</string>
    <string name="app_status_9">Active jammer switched to whitenoise.</string>
    <string name="app_status_9_1">Active jammer switched to shadow.</string>
    <string name="app_status_10">Passive jammer running.</string>
    <string name="app_status_11">Active jammer running.</string>
    <string name="app_status_12">Tap to return to app.</string>
    <string name="app_status_13">Passive jammer buffer read lock enabled. REQUIRES PASSIVE JAMMER RESTART.</string>
    <string name="app_status_14">Passive jammer buffer read lock disabled. REQUIRES PASSIVE JAMMER RESTART.</string>
    <string name="app_status_15">Waveform swtched to sine.</string>
    <string name="app_status_16">Waveform swtched to square.</string>
    <string name="app_status_17">Waveform swtched to sawtooth.</string>
    <string name="intro_1">PilferShush Jammer attempts to block unwanted and hidden use of the hardware microphone.</string>
    <string name="intro_2">Via a PASSIVE jamming technique that engages the microphone blocking other apps from using it.</string>
    <string name="intro_3">Or via an ACTIVE jammer that emits either tones or white noise covering 18kHz to 24kHz.</string>
    <string name="intro_4">This app does NOT listen to or record any of the audio from the microphone during this.</string>
    <string name="intro_5">Info summary shows relevant, basic information about all user installed apps.</string>
    <string name="intro_6_1">Search shows the background services and receivers listed for a specific app chosen from a popup list.</string>
    <string name="intro_6_2">List SDK shows the names of NUHF/ACR packages searched.</string>
    <string name="intro_6_3">Apps can contain multiple packages each with different names.</string>
    <string name="intro_7">Use Settings to change the active jamming settings.</string>
    <string name="intro_8">Active jammer set to:\u0020</string>
    <string name="readme_dialog_1">README</string>
    <string name="readme_dialog_2">The INSPECTOR function is not a proof but merely a way to provide more information to the user about any installed apps on their device.</string>
    <string name="readme_dialog_3">Summary: lists user installed apps and checks for record audio ability, start at boot, background services, background receivers, NUHF/ACR SDK name inclusion and Accessibility service use for gaining special functions.</string>
    <string name="readme_dialog_4">Search: provides more information about a specific user installed app and any services or receivers it has. These names are usually an indication of their function but they can be non-sensical, random letters.</string>
    <string name="readme_dialog_5">SDK list: is the current names of known packages from companies that provide near ultra-high frequency listening and/or automated content recognition abilities. PilferShush app searches the user installed apps for any package names that make a match from this list. This is not a proof of any app behaviour but merely one method to provide more information to the user about the apps on their devices.</string>
    <string name="readme_dialog_6">The PASSIVE Jammer is the primary method of defence against unwanted use of the device microphone by user installed apps. It utilises a current feature of the Android API that insists that only one user app may use the microphone at a time. PilferShush asks the Android system for access to the microphone via the AudioRecord function and then asks to start recording. At this point the microphone is now ready to provide the requesting app with audio data. PilferShush does not ask for this audio data but simply maintains its hold on the microphone. Initially, on older Android devices, this was enough but with later versions it is now necessary to create and prepare a MediaRecorder function so that PilferShush is still allowed to access the microphone while running in the background. System apps such as Telephone will always override and take control of the microphone. Some voice assistants and accessibility apps, depending on their setup, may still access the microphone during this passive jamming. As of Android 10 (Q) concurrent use of the microphone is allowed which means another user app may take over the microphone while PilferShush is jamming in the background. Limited responses are possible at the moment but a pop up should appear in the middle of the screen to inform the user of an Android 10 device that another app has control of the microphone and that PilferShush is attempting to regain blocking control of the microphone. More research is being carried out.</string>
    <string name="readme_dialog_7">The ACTIVE Jammer is an experimental method of jamming NUHF beacon signals with random sounds that fall within the NUHF ranges as measured from 18000 hz to 24000 hz. NUHF beacons send out specific tones that are encoded to make sense to the specific app it is targeting. Usually these specific tones are centered around a particular frequency (carrier) with other meaningful tones emitted within a range above and below that frequency (drift limit). The broadcast of these NUHF beacon signals are played very fast (drift speed) and in a frequency range that humans can\'t ordinarily hear. PilferShush active jammer attempts to block these beacon signals by flooding the same frequency range with meaningless random tones. You should assume this method is unreliable, for reasons beyond this README, even if you know what specific settings are likely to match a particular NUHF beacon signal.</string>
    <string name="settings_label_1">Active Jammer Settings</string>
    <string name="settings_label_2">Passive Jammer Settings</string>
    <string name="buffer_info_text_1">Enable audioRecord buffer read lock (more CPU)</string>
    <string name="buffer_label_1">ENABLE</string>
    <string name="buffer_label_2">DISABLE</string>
    <string name="drift_dialog_1">Set drift speed</string>
    <string name="drift_dialog_2">10</string>
    <string name="drift_dialog_3">(1 = fast, 10 = slow)</string>
    <string name="jammer_dialog_6">Set carrier frequency</string>
    <string name="jammer_dialog_8">19000</string>
    <string name="jammer_dialog_9">Set drift limit</string>
    <string name="jammer_dialog_10">1000</string>
    <string name="jammer_dialog_11">(All frequencies constrained to NUHF)</string>
    <string name="active_dialog_3">TONES</string>
    <string name="active_dialog_4">NOISE</string>
    <string name="active_dialog_5">TEST</string>
    <string name="active_dialog_6">NUHF</string>
</resources>