<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inspector_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InspectorFragment">

    <LinearLayout
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:background="@color/colorLogger"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/inspect_button_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_view_margin"
            android:orientation="vertical"
            android:paddingTop="@dimen/main_margin"
            android:paddingBottom="@dimen/mini_margin"
            android:background="@color/colorLogger"
            app:layout_constraintTop_toTopOf="@+id/inspector_layout"
            tools:layout_editor_absoluteX="@dimen/zero_margin">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/app_summary_button"
                android:layout_width="@dimen/toggle_button_width"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/button_start_margin"
                android:layout_marginBottom="@dimen/button_bottom_margin"
                app:srcCompat="@drawable/outline_info_24px"
                android:background="@drawable/text_button_border"
                android:contentDescription="@string/main_inspector_1" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/app_inspect_button"
                android:layout_width="@dimen/toggle_button_width"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="38dp"
                android:layout_marginBottom="@dimen/button_bottom_margin"
                android:layout_toStartOf="@+id/sdk_list_button"
                android:layout_toEndOf="@+id/app_summary_button"
                app:srcCompat="@drawable/outline_inspect_24px"
                android:background="@drawable/text_button_border"
                android:contentDescription="@string/main_inspector_2" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/sdk_list_button"
                android:layout_width="@dimen/toggle_button_width"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="@dimen/button_start_margin"
                android:layout_marginBottom="@dimen/button_bottom_margin"
                app:srcCompat="@drawable/outline_sdk_list_24px"
                android:background="@drawable/text_button_border"
                android:contentDescription="@string/main_inspector_3" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/scan_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginEnd="@dimen/half_margin"
            android:paddingTop="@dimen/half_margin"
            android:paddingBottom="@dimen/mini_margin"
            app:layout_constraintBottom_toBottomOf="@+id/inspector_layout"
            app:layout_constraintTop_toBottomOf="@+id/inspect_button_layout"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="@dimen/zero_margin">

            <TextView
                android:id="@+id/scan_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:background="@color/colorLogger"
                android:gravity="bottom"
                android:padding="@dimen/main_margin"
                android:scrollbars="vertical"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="-35dp" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/scan_text_layout"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>